--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,11 +4,16 @@ body {
 }
 
 input {
-    margin: 10px;   
+    margin: 10px;
+    opacity: 0.7;
+    color: #100F0F; 
 }
 
 #navText {
     color: #E4DCC8;
 }
 
+.btn {
+    margin-right: 10px;
+}
 
