--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,8 +5,16 @@ body {
 
 input {
     margin: 10px;
-    opacity: 0.7;
-    color: #100F0F; 
+    opacity: 0.8;
+    color: #0C0B0B; 
+}
+
+#total-container {
+    height: 20px;
+}
+
+::-webkit-input-placeholder {
+    color: #191717;
 }
 
 #navText {
